第四章重写

--- a/shuthesis-master/data/appendix.tex
+++ b/shuthesis-master/data/appendix.tex
@@ -29,10 +29,10 @@
 样例1：
 
 期望返回： 
-隆德县农业灌溉用水权确权汇总表
+三里店洪水汛期调度运用计划表
 
 问题：
-列出凤岭罐区所有确权水量大于20万立方米的村
+三里店水库百年一遇洪水的入库流量是多少？
 
 表格数据:
 
@@ -40,18 +40,17 @@
     \centering
     % \caption{三里店水库汛期调度运用计划表}
     % \label{tab:flood-plan}
-    \begin{tabular}{lllll}
+    \begin{tabular}{llllc}
     \toprule
     \textbf{洪水标准} & \textbf{入库流量} & \textbf{入库洪水总量} & \textbf{迎洪控制水位} & \textbf{泄流措施} \\
     \midrule
-    * & * & * & * & * \\
-    * & * & * & * & * \\
-    * & * & * & * & * \\
-    * & * & * & * & * \\
-    * & * & * & * & * \\
-    * & * & * & * & * \\
-    * & * & * & * & * \\
-    * & * & * & * & * \\
+    5 & * & * & 汛限水位 & 开启输水建筑物水塔闸门 \\
+    10 & * & * & 汛限水位 & 开启输水建筑物水塔闸门 \\
+    20 & * & * & 汛限水位 & 开启输水建筑物水塔闸门 \\
+    30 & * & * & 汛限水位 & 开启输水建筑物水塔闸门 \\
+    50 & * & * & 汛限水位 & 开启输水建筑物水塔闸门 \\
+    100 & * & * & 汛限水位 & 开启输水建筑物水塔闸门 \\
+    500 & * & * & 汛限水位 & \makecell{开启输水建筑物水塔闸门，\\同时开启溢洪道泄洪} \\
     \bottomrule
     \end{tabular}
 \end{table}
