--- a/shuthesis-master/data/chap01.tex
+++ b/shuthesis-master/data/chap01.tex
@@ -138,16 +138,17 @@ Chen等人提出的Neural ODE\cite{chen2018neural}使用常微分方程(Ordinary
 
 同样Rubanova\cite{rubanova2019latent}等人也在连续动态系统建模上构造了ODE-RNN模型，并且针对非周期的稀疏不规则采样问题做出了验证。实验验证了ODE模型的优越性，但对于ODE的求解过程依旧存在训练时间长的问题。后来伴随大模型时代的到来，研究者由针对transformer结构提出了ODE-transformer\cite{li2021ode}，因为即使ODE类的模型在连续时间序列的表达和梯度的计算有较高的优越性，但存在ODE求解误差累积的问题，于是文章提出了一种基于常微分方程（ODE）理论的 Transformer 模型，通过引入数值方法中的高阶求解方法（如 Runge-Kutta 方法），显著提高了 Transformer 在神经机器翻译（NMT）任务中的性能和效率。
 
-以上所有的ODE模型及方法都是基于残差块\cite{weinan2017proposal}的模型结构建，如公式\ref{eq:残差}所示，其中\(\mathcal{F}(x)\)表示具体模型的结构，如attention层、卷积层等，$x$表示输入。由于其存在自映射结构，可以构造成欧拉离散化来表示微分，具体原理介绍可见第\ref{cha:第三章}章。
-\begin{equation}
-  \label{eq:残差}
-  x_{i+1} = \mathcal{F}(x_i) + x_i
-\end{equation}
+% 以上所有的ODE模型及方法都是基于残差块\cite{weinan2017proposal}的模型结构建，如公式\ref{eq:残差}所示，其中\(\mathcal{F}(x)\)表示具体模型的结构，如attention层、卷积层等，$x$表示输入。由于其存在自映射结构，可以构造成欧拉离散化来表示微分，具体原理介绍可见第\ref{cha:第三章}章。
+以上所有的ODE模型及方法都是基于残差块\cite{weinan2017proposal}的模型结构建。由于其存在自映射结构，可以构造成欧拉离散化来表示微分，具体原理介绍可见第\ref{cha:第三章}章。
+% \begin{equation}
+%   \label{eq:残差}
+%   x_{i+1} = \mathcal{F}(x_i) + x_i
+% \end{equation}
 以上工作内容均为在微分方程视角下的神经网络模型，是将离散的神经网络模型构造成连续的微分方程并利用各种微分方程处理方式处理构造的新系统来优化模型性能。而对于神经网络视角下的微分方程，在上世纪九十年代就有提出利用循环神经网络拟合动力学系统或数学模型\cite{cybenko1989approximation,li2022deep,cao2018brits,pearlmutter1989learning,neil2016phased,che2018recurrent}，证明了神经网络就是离散化的动力学系统（微分方程）并提出了万能近似定理，认为一个具有至少一层隐藏层的前馈神经网络，只要该隐藏层具有足够数量的神经元，并且使用具有“挤压”性质的激活函数（如sigmoid函数），该神经网络可以以任意精度来逼近任何从一个有限维空间到另一个有限维空间的Borel可测函数，尤其是循环神经网络这一类对时间序列敏感的模型，因此如何利用多年来的动力学系统方法处理神经网络模型引起了广大研究者的兴趣。
 本文针对以上ODE神经网络存在的ODE求解器耗时长消耗过多计算资源问题做出优化，将动力学系统中针对高阶系统计算困难而提出的模型降阶(model order reduction)方法引入到ODE神经网络模型中，通过在不损失或损失较小精度并且不需要重新微调训练(fine tuning)的情况下，对模型进行降维，从而减少模型参数与计算量。并且即使在大模型广泛应用的现在，循环神经网络仍在连续提示词编码中发挥作用。
 
 
-\section{论文的主要研究内容及关系梳理}
+\section{论文的主要研究内容及创新点}
 本论文以作者攻读硕士学位期间所承担课题的研究工作为基础，主要研究了动力学系统方法的模型压缩轻量化模型以及大模型表格数据推理技术，并将这些技术应用于面向水利领域的基于本地知识库的智能问答系统中。论文的主要内容包括以下几个方面： 
 
 第一，详细阐述了研究的背景和意义，并对国内外相关技术和研究现状进行了系统的综述。介绍了模型压缩和大模型表格数据推理在智能问答系统应用中的基础理论，包括ODE（Ordinary Differential Equation，常微分方程）神经网络模型、提示词学习和RAG（Retrieval-Augmented Generation，检索增强生成）技术原理以及大模型的表格数据推理等，为后续内容的展开奠定了坚实的理论基础。 
@@ -157,19 +158,29 @@ Chen等人提出的Neural ODE\cite{chen2018neural}使用常微分方程(Ordinary
 第三，深入探讨了大型语言模型在表格数据推理方面的应用，并针对水利领域表格数据特点提出了一种创新的大型语言模型表格推理增强框架。该框架融合了检索增强推理技术和代码生成技术，旨在显著提升大型语言模型对Excel等表格数据的推理能力。具体而言，该框架从数据预处理、表格数据处理以及大型语言模型推理等多个关键环节进行了全面优化。通过先对表格数据进行预处理，再利用大型语言模型的代码生成能力生成SQL语言并执行等多轮协同步骤，有效解决了大型语言模型在表格推理领域面临的挑战，从而显著增强了推理效果和性能表现。
 
 第四，应用前两章节技术设计并实现了水利领域大模型智能问答系统，根据用户提供的多种资料形式，如word、PDF、Excel等，通过知识向量库。使用Langchain等开发框架实现了问答系统的主要功能要求，通过大模型实现多轮对话，满足用户对水利相关知识、调用规则和数据的查询和问答需求，支持对外部数据库的修改。结合第三部分的大模型表格数据推理效果，最终加强了问答系统对格式化数据的推理能力，提高了回答效果。
-\begin{figure}[!h]
-  \centering
-  \includegraphics[scale=0.6]{图1.2.png}
-  \bicaption{基础RAG结构}{ Basic RAG Structure}
-  \label{fig:章节架构}
-\end{figure}
+% \begin{figure}[!h]
+%   \centering
+%   \includegraphics[scale=0.6]{图1.2.png}
+%   \bicaption{基础RAG结构}{ Basic RAG Structure}
+%   \label{fig:章节架构}
+% \end{figure}
 
 第五，对本文的研究工作进行了总结，同时对未来可以改进的技术点和方向进行展望。
 本文的工作是基于作者在学校及合作企业相关研究工作完成，作为核心人员参与了合作企业水利领域RAG智能问答系统的开发及相关技术的研究工作。
 
-为方便论文阅读，梳理各部分关键技术研究之间的关系，如图\ref{fig:章节架构}所示。第三章的循环神经网络压缩技术和第四章大模型表格数据推理技术框架均为在RAG系统中的关键应用技术。第三章循环神经网络作为连续提示词编码的常用结构之一，研究其压缩技术可以提升RAG系统的推理效率，第四章提出了针对水利领域表格数据资料特点的表格数据推理框架，能够增强RAG问答系统对表格数据的推理能力和回答质量。第五章将上述两种技术应用于实际，实现了水利领域的问答系统，应用前两章的技术增强了系统的推理效率和对表格数据的推理能力。
+% 为方便论文阅读，梳理各部分关键技术研究之间的关系，如图\ref{fig:章节架构}所示。第三章的循环神经网络压缩技术和第四章大模型表格数据推理技术框架均为在RAG系统中的关键应用技术。第三章循环神经网络作为连续提示词编码的常用结构之一，研究其压缩技术可以提升RAG系统的推理效率，第四章提出了针对水利领域表格数据资料特点的表格数据推理框架，能够增强RAG问答系统对表格数据的推理能力和回答质量。第五章将上述两种技术应用于实际，实现了水利领域的问答系统，应用前两章的技术增强了系统的推理效率和对表格数据的推理能力。
 
 本文的主要创新点如下：1、提出一种针对循环神经网络等时间序列模型的基于动力学系统模型降阶的模型压缩方法，可以在不进行微调的情况下将模型参数量与计算量分别压缩至原始模型的34.4\%与25.6\%，精度损失控制在5\%以内。相比其他方法不仅在无微调的情况下更有效地压缩了模型参数，又在此之上额外减少了计算量。同时将传统动力学方法引入神经网络中，将循环神经网络表达为动力学系统微分方程的形式，提高了其可解释性；2、提出了一种大模型表格数据推理框架，增强了大模型RAG系统对表格数据的检索及推理能力。本方法在表格数据推理框架中引入多级表格检索方法，相比其他单一表格的推理框架又额外考虑了表格数据的特殊结构在检索过程中带来的困难，提高了表格推理框架在实际RAG系统中的表现能力；3、将基于大模型的RAG系统引入水利水库管理与调度领域，实现了该场景下的智能问答系统的实现落地应用。
+
+\section{论文各章节关系梳理}
+
+为方便论文阅读，梳理各部分关键技术研究之间的关系，如图\ref{fig:章节架构}所示。第三章的循环神经网络压缩技术和第四章大模型表格数据推理技术框架均为在RAG系统中的关键应用技术。第三章循环神经网络作为连续提示词编码的常用结构之一，研究其压缩技术可以提升RAG系统的推理效率，第四章提出了针对水利领域表格数据资料特点的表格数据推理框架，能够增强RAG问答系统对表格数据的推理能力和回答质量。第五章应用上述两种技术，实现了水利领域的问答系统，应用前两章的技术增强了系统的推理效率和对表格数据的推理能力。
+\begin{figure}[h]
+  \centering
+  \includegraphics[scale=0.6]{章节关系.png}
+  \bicaption{章节关系}{ Relationship Between Chapters}
+  \label{fig:章节架构}
+\end{figure}
 \label{sec:first}
 
 
