--- a/shuthesis-master/data/chap03.tex
+++ b/shuthesis-master/data/chap03.tex
@@ -20,20 +20,20 @@
 
 \section{本征正交分解法}
 本征正交分解法\cite{nomura1993structure}作为一种基于数据驱动的降维方法，其核心思想是通过提取高维动力学系统状态空间中的主导信息，构建低维子空间以近似原始系统的方法。该方法能够通过一组正交基降低非线性动力学系统模型的维度，是一种常见的模型降阶方法，其在流体力学、结构动力学等领域已得到广泛应用。在文中被引入神经网络模型压缩领域，为解决循环神经网络（RNN）参数量冗余与计算效率问题提供了新思路。
-本征正交分解法(POD)的核心思想是将$k$个样本点的$n$维数据，投影到$m$维，即$n$维的数据可以被$m$维的数据近似，并且$m<<n$。假设有$k$个采样数据${x_1},{x_2},...,{x_k}$其中 ${x_i}\in \mathbb{R} ^{n}$记作
+本征正交分解法(POD)的核心思想是将$k$个样本点的$n$维数据，投影到$m$维，即$n$维的数据可以被$m$维的数据近似，并且$m<<n$。假设有$k$个采样数据${x_1},{x_2},...,{x_k}$其中 ${x_i}\in {R} ^{n}$记作
 \begin{equation}
   \label{eq:1}
-X = [ {x_1},{x_2},...,{x_k}]  \in \mathbb{R} ^{n \times k}
+X = [ {x_1},{x_2},...,{x_k}]  \in {R} ^{n \times k}
 \end{equation}
-通过奇异值分解法(Singular Value Decomposition, SVD)计算样本数据 的一组正交基向量$\{ {\phi _i}\} _{i = 1}^n$，使对于每一个${x_i} \in \mathbb{R}^n,i \in [1,k]$都能够被表示为正交基向量的线性组合
+通过奇异值分解法(Singular Value Decomposition, SVD)计算样本数据 的一组正交基向量$\{ {\phi _i}\} _{i = 1}^n$，使对于每一个${x_i} \in {R}^n,i \in [1,k]$都能够被表示为正交基向量的线性组合
 \begin{equation}
   \label{eq:2}
-{x_i} = {y_{1i}}{\phi _1} + {y_{2i}}{\phi _2} +  \cdots  + {y_{ni}}{\phi _n},{\rm{ }}{y_{ji}} \in \mathbb{R}
+{x_i} = {y_{1i}}{\phi _1} + {y_{2i}}{\phi _2} +  \cdots  + {y_{ni}}{\phi _n},{\rm{ }}{y_{ji}} \in {R}
 \end{equation}
 由于在SVD计算过程中基向量$\{ {\phi _i}\} _{i = 1}^n$按照能代表的信息量递减排序，所以可以用信息密度最高的前$m$项来近似原始样本数据，即
 \begin{equation}
   \label{eq:3}
-  {x_{i(m)}} = {y_{1i}}{\phi _1} + {y_{2i}}{\phi _2} +  \cdots  + {y_{mi}}{\phi _m},{\rm{ }}{y_{ji}} \in \mathbb{R}
+  {x_{i(m)}} = {y_{1i}}{\phi _1} + {y_{2i}}{\phi _2} +  \cdots  + {y_{mi}}{\phi _m},{\rm{ }}{y_{ji}} \in {R}
 \end{equation}
 % 记作${x_m} = \phi {{\bf{y}}_m},{{\bf{y}}_m} \in \mathbf{R}^m$。
 将原始数据和近似数据之间的误差定义为
@@ -46,7 +46,7 @@ X = [ {x_1},{x_2},...,{x_k}]  \in \mathbb{R} ^{n \times k}
 \label{eq:5}
   {X^T} = U\Sigma  {V^T}
 \end{equation}
-其中$X$为采样数据点$\{ {x_1},{x_2},...,{x_k}\}  \in {\mathbb{R}^{n \times k}}$,$\Sigma $为降序排列的奇异值对角矩阵，$U$是左奇异值矩阵，$V$是右奇异值矩阵。
+其中$X$为采样数据点$\{ {x_1},{x_2},...,{x_k}\}  \in {{R}^{n \times k}}$,$\Sigma $为降序排列的奇异值对角矩阵，$U$是左奇异值矩阵，$V$是右奇异值矩阵。
 % 并且满足
 % \begin{equation}
 % \label{eq:6}
@@ -62,12 +62,12 @@ X = [ {x_1},{x_2},...,{x_k}]  \in \mathbb{R} ^{n \times k}
   {y_t} = g({x_t},{u_t})
   \end{array} \right.
 \end{equation}
-其中函数$f( \cdot ) \in {\mathbb{R}^n}$和函数$g( \cdot ) \in {\mathbb{R}^o}$为非线性函数，${u_t} \in {\mathbb{R}^i}$为系统输入，${y_t} \in {\mathbb{R}^o}$为系统输出。取一定连续时间内的系统状态
+其中函数$f( \cdot ) \in {{R}^n}$和函数$g( \cdot ) \in {{R}^o}$为非线性函数，${u_t} \in {{R}^i}$为系统输入，${y_t} \in {{R}^o}$为系统输出。取一定连续时间内的系统状态
 \begin{equation}
 \label{eq:8}
-X = [{x_1},{x_2},...,{x_k}]  \in \mathbb{R}^{n \times k}
+X = [{x_1},{x_2},...,{x_k}]  \in {R}^{n \times k}
 \end{equation}
-为需要降阶近似的数据。设矩阵$V,W \in {\mathbb{R}^{n \times m}}$$(m<n)$满足
+为需要降阶近似的数据。设矩阵$V,W \in {{R}^{n \times m}}$$(m<n)$满足
 \begin{equation}
 \label{eq:9}
 {W^T}V = {I_m}  
@@ -81,7 +81,7 @@ X = [{x_1},{x_2},...,{x_k}]  \in \mathbb{R}^{n \times k}
 令
 \begin{equation}
 \label{eq:11}
-V = W = {\varPhi  _m} \in {{\mathbb{R}}^{n \times m}}
+V = W = {\varPhi  _m} \in {{{R}}^{n \times m}}
 \end{equation}
 则${\hat x_t} = \varPhi  _m^T{x_t}$为${x_t}$到$\varPhi  _m^T$所在空间上的投影。$W$由采样数据 的右奇异值矩阵前$m$项组成。系统\ref{eq:7}降阶后的系统为
 \begin{equation}
@@ -91,7 +91,7 @@ V = W = {\varPhi  _m} \in {{\mathbb{R}}^{n \times m}}
   {y_t} = g(V{{\hat x}_t},{u_t})
   \end{array} \right.
 \end{equation}
-其中${\hat x_t} \in {\mathbb{R}^m}$。可以通过投影矩阵$W$, $V$得到降阶系统。
+其中${\hat x_t} \in {{R}^m}$。可以通过投影矩阵$W$， $V$得到降阶系统。
 \section{动态循环神经网络}
 循环神经网络作为时间序列建模常用模型，在不同采样时间下具有连续变化的状态，每个采样时间下的结果取决于上一个采样的结果和当前的输出，并且每次计算的系数矩阵和函数相同，这点与动力学系统类似，且由于激活函数的存在，可以将循环神经网络视作非线性动力学系统。为验证循环神经网络与动力学系统的相似性，分别使用循环神经网络和动力学系统模型简单对一个时间序列进行建模，并比较结果。
 实验使用RNN模型拟合一个正弦函数映射到余弦函数的序列模型。自定义一个32节点单层循环神经网络，使用正弦函数作为输入，余弦函数作为标签训练输出，采样频率为1/0.0625π HZ。将得到训练后的RNN模型参数作为动力学系统的微分方程形式，将RNN网络表示为
@@ -116,7 +116,7 @@ V = W = {\varPhi  _m} \in {{\mathbb{R}}^{n \times m}}
   \bicaption{函数拟合结果}{Comparison of Cosine Function Modeling}
   \label{fig:函数拟合结果}
 \end{figure}
-绿色波形为标准余弦信号，橙色波形为动力学系统建模,红色波形为二者之间的差，蓝色波形为使用POD方法降阶后的结果。实验结果表明将原本训练好的RNN参数带入到微分方程中能够完成功能，表明了在参数相同时动力学系统与神经网络的一致性。
+绿色波形为标准余弦信号，橙色波形为动力学系统建模，红色波形为二者之间的差，蓝色波形为使用POD方法降阶后的结果。实验结果表明将原本训练好的RNN参数带入到微分方程中能够完成功能，表明了在参数相同时动力学系统与神经网络的一致性。
 尽管传统循环神经网络在时间序列建模中可通过离散化常微分方程形式表征
 其动力学特性，但其在长期依赖任务（如长程时间序列分类）中表现受限。这一局限性主要源于梯度消失/爆炸等问题，导致网络难以有效捕捉跨时间步的时序关联性。
 为解决此问题，长短期记忆网络（Long Short-Term Memory, LSTM）\cite{hochreiter1997long}通过引入门控机制（输入门、遗忘门、输出门）重构了隐藏状态的动态演化过程。具体而言，遗忘门通过可学习的权重系数调节历史信息的保留比例，而输入门则动态控制当前输入的融合强度，从而实现对长期依赖的显式建模。实验表明，门控机制对复杂时序模式捕获的有效性。
@@ -158,7 +158,7 @@ h_{t + 1}^{l + 1} = f(W_i^{l + 1}h_{t + 1}^l + W_h^{l + 1}h_t^{l + 1} + {b^{l + 
   \end{equation}
 其中$\hat W_{\hat h}^l = W_h^l{V^l} \in {R^{n \times m}}$，$\hat W_i^{l + 1} = W_i^{l + 1}{V^l} \in {R^{n \times m}}$,$\hat W_{\hat h}^{l + 1} = W_h^{l + 1}{V^{l + 1}} \in {R^{n \times m}}$, $\hat h \in {R^m}$ 。
 
-通过将隐藏状态投影到较低的状态，可以获得具有较少参数和隐藏状态的模型,如图\ref{fig:原始模型和压缩模型的结构}所示,直观地展示新模型与原始模型在参数和隐藏层维度上的维度差异。其中$i$,$f$,$c$,$o$分别代表输入门、遗忘门、控制们和输出门。$W$,$V^T$分别代表每个们的权重矩阵和投影矩阵，$b$代表偏执，$h_t$,$c_t$,$o_t$分别代表$t$时刻的隐藏层状态、控制状态和输出状态。符号$\hat  \cdot $标志压缩后的模型参数。
+通过将隐藏状态投影到较低的状态，可以获得具有较少参数和隐藏状态的模型，如图\ref{fig:原始模型和压缩模型的结构}所示，直观地展示新模型与原始模型在参数和隐藏层维度上的维度差异。其中$i$,$f$,$c$,$o$分别代表输入门、遗忘门、控制们和输出门。$W$,$V^T$分别代表每个们的权重矩阵和投影矩阵，$b$代表偏执，$h_t$,$c_t$,$o_t$分别代表$t$时刻的隐藏层状态、控制状态和输出状态。符号$\hat  \cdot $标志压缩后的模型参数。
 
 在长短期记忆网络模型中，每层网络的隐藏层都有四个门控系数矩阵和输入系数矩阵。
 降低以上矩阵的维度来达到压缩的目的。本小节通过将循环神经网络以动力学系统的方式表达，增加了神经网络的可解释性。
@@ -173,11 +173,11 @@ h_{t + 1}^{l + 1} = f(W_i^{l + 1}h_{t + 1}^l + W_h^{l + 1}h_t^{l + 1} + {b^{l + 
 实验使用一个两层，隐藏层维度为72的长短期记忆网络来验证该方法的有效性。
 实验使用UCI-HAR数据集\cite{anguita2012human}验证方法效果。UCI-HAR数据集是一个广泛应用于人类活动识别领域的公开数据集，它通过在智能手机上搭载的传感器收集了30名志愿者在进行六种日常活动（步行、上楼梯、下楼梯、静坐、站立和平躺）时产生的动态数据。这些数据由加速度计和陀螺仪以50Hz的频率采集得到，涵盖了三轴的线性加速度和角速度信息。在数据预处理阶段，研究者们通过噪声滤波器和巴特沃斯低通滤波器对原始数据进行了清洗和分离，以区分重力和身体运动分量，并计算了包括时域和频域在内的561个特征向量。数据集被分为训练集和测试集，其中训练集包含了21名志愿者的数据，而测试集则包含了剩余9名志愿者的数据。数据集有6个分类结果，9个特征和128次时间序列采样。综上，确定模型的输入系数矩阵、输出系数矩阵和时间长度，一共包含60k参数。
 首先在Pytorch框架下利用标准LSTMcell和Adam优化器训练原始大小的模型。得到在测试集上准确度为85\%的基线模型。再利用本征正交分解压缩的模型与之进行对比。
-将网络看作一个关于输出为$x$，隐藏层为$h$的非线性系统。全连接层作为输出函数。
+将网络看作一个关于输入为$x$，输出为$y$，隐藏层为$h$，全连接层作为输出函数的非线性系统
 \begin{equation}
   \label{eq:22}
 \left\{ \begin{array}{l}
-  {h_{t + 1}} = f({x_t},{u_t})\\
+  {h_{t + 1}} = f({h_t},{h_t})\\
   {y_t} = fc({h_t})
   \end{array} \right.
 \end{equation}
@@ -258,7 +258,7 @@ h_{t + 1}^{l + 1} = f(W_i^{l + 1}h_{t + 1}^l + W_h^{l + 1}h_t^{l + 1} + {b^{l + 
   \bicaption[优化前后模型性能对比]{优化前后模型性能对比}{Comparison of Model Performance Before and After Optimization}
   \label{fig:优化前后模型准确率对比}
 \end{figure}
-图\ref{fig:优化前后模型准确率对比}实验结果表明，基于大规模训练数据构建的投影矩阵$V$可显著提升本征正交分解（POD）的模型压缩效果，其优化效果与降维程度呈正相关。当隐藏层维度压缩至36以下时（对应压缩比大于65\%），优化后模型的分类准确率较未优化基线平均提升1.9\%，验证了高维状态空间中关键维度的统计特性对压缩性能的关键影响。进一步分析显示，单一训练样本构建的投影矩阵因覆盖状态空间有限，易受局部动态特征干扰，导致压缩模型泛化能力下降，而基于多批次数据联合优化的投影矩阵，能够有效提取共性特征,特别在当维度降低至36以下，数据已丢失关键信息维度时，能够显著提高压缩后的模型性能。这一现象表明，投影矩阵的泛化性能本质上取决于训练数据分布的覆盖范围，当样本量不足时，POD易陷入局部最优解，而大规模数据驱动的策略可缓解非线性特征丢失的问题。
+图\ref{fig:优化前后模型准确率对比}实验结果表明，基于大规模训练数据构建的投影矩阵$V$可显著提升本征正交分解（POD）的模型压缩效果，其优化效果与降维程度呈正相关。当隐藏层维度压缩至36以下时（对应压缩比大于65\%），优化后模型的分类准确率较未优化基线平均提升1.9\%，验证了高维状态空间中关键维度的统计特性对压缩性能的关键影响。进一步分析显示，单一训练样本构建的投影矩阵因覆盖状态空间有限，易受局部动态特征干扰，导致压缩模型泛化能力下降，而基于多批次数据联合优化的投影矩阵，能够有效提取共性特征，特别在当维度降低至36以下，数据已丢失关键信息维度时，能够显著提高压缩后的模型性能。这一现象表明，投影矩阵的泛化性能本质上取决于训练数据分布的覆盖范围，当样本量不足时，POD易陷入局部最优解，而大规模数据驱动的策略可缓解非线性特征丢失的问题。
 
 为证明POD算法的优越性，对比了现有对RNN类网络的压缩方式，与SVD\cite{xue2013restructuring}方法进行对比，实验结果如表\ref{tab:method-comparison}所示。
 \begin{table}[htb]
