--- a/shuthesis-master/data/chap05.tex
+++ b/shuthesis-master/data/chap05.tex
@@ -40,7 +40,7 @@ LangChain与FAISS的技术组合在本研究中展现出显著的协同优势。
       \end{tabularx}
     \end{minipage}
   \end{table}
-在框架中使用的大模型组件为阿里云的通义千问系列大模型中的qwen-max\cite{bai2023qwen}, 在通义千问系列中性能表现最佳，中英文code能力、逻辑能力、多语言能力显著提升，回复风格面向人类偏好进行大幅调整，模型回复详实程度和格式清晰度明显改善，创作类专项、JSON格式遵循专项、角色扮演专项能力定向提升。文本嵌入的粗排序模型同样使用通义千问系列的text-embedding\_v2模型，将本地知识库嵌入为向量数据库、对系统输入进行向量化和对检索召回的文本向量进行解码，输出可阅读的文本信息。而对于精排序模型使用网易bce-reranker-base\_v1\footnote[2]{\url{https://github.com/netease-youdao/BCEmbedding?tab=readme-ov-file}} 模型，直接计算问题输入与粗排序模型返回的部分文本向量之间的相似度，提高检索召回率。
+在框架中使用的大模型组件为阿里云的通义千问系列大模型中的qwen-max\cite{bai2023qwen}, 在通义千问系列中性能表现最佳，中英文code能力、逻辑能力、多语言能力显著提升，回复风格面向人类偏好进行大幅调整，模型回复详实程度和格式清晰度明显改善，创作类专项、JSON格式遵循专项、角色扮演专项能力定向提升。文本嵌入的粗排序模型同样使用通义千问系列的text-embedding\_v2模型，将本地知识库嵌入为向量数据库、对系统输入进行向量化和对检索召回的文本向量进行解码，输出可阅读的文本信息。而对于精排序模型使用网易bce-reranker-base\_v1模型，直接计算问题输入与粗排序模型返回的部分文本向量之间的相似度，提高检索召回率。
 
 \section{RAG智能问答功能设计}
 本章详细介绍了智能问答系统中的对知识库的问答问答功能。该功能主要基于检索增强生成（RAG）技术，将隆德县水库信息、水利调度专家经验、专业文档以及规章制度等封闭领域知识，以搜索提示词的形式输入模型进行推理。尽管通用大模型在处理广泛领域的知识和文本理解方面表现出色，但在应对知识密集型和封闭领域的问题时，往往难以发挥其应有的功能，如图\ref{fig:无检索}所示。
