公开数据集实验补充

--- a/shuthesis-master/data/abstract.tex
+++ b/shuthesis-master/data/abstract.tex
@@ -4,29 +4,30 @@
 
     1、为提高RAG系统的时效性，针对一种RAG系统中常见的连续提示词编码网络——循环神经网络，提出一种基于本征正交分解（Proper Orthogonal Decomposition, POD）的动力学系统模型压缩方法，通过循环神经网络隐藏状态的低维投影，将模型参数量与计算量分别压缩至原始模型的34.4\%与25.6\%，精度损失控制在5\%以内，并且通过将神经网络结构表达为动力学系统微分方程的形式，提高了其可解释性。
     
-    2、为提高RAG系统的表格数据推理能力，针对水利场景下表格数据特点及大模型对结构化表格数据推理的局限性，设计多级表格检索和推理框架，结合Agent代理思想及SQL代码生成技术，利用数据库技术简化表格，并构建检索-优化-生成的循环自纠错机制，优化了推理质量。
+    2、为提高RAG系统的表格数据推理能力，针对表格数据特点及大模型对结构化表格数据推理的局限性，设计多级表格检索和推理框架，结合Agent代理思想及SQL代码生成技术，利用数据库技术简化表格，并构建检索-优化-生成的循环自纠错机制，优化了推理质量。
     
     3、针对数字孪生灌区目前存在的智能问答系统缺失，无法适应调度系统升级需求等问题，设计并实现了数字孪生灌区多功能智能知识库，结合RAG技术为智能问答系统提供本地知识支撑。通过建立业务规则库来支撑业务场景的规则适配，规范和约束水利业务管理行为。
 
-    4、应用上述基于本征正交分解的动力学系统模型压缩方法、多级表格检索和推理框架等方法在实际场景中的优化效果，设计并实现了基于知识库的RAG智能问答系统。将检索增强生成技术与本地知识库技术结合并成功应用于水库调度、灌溉管理等场景，提升了水利水库调度领域的智能化水平。
+    % 4、应用上述基于本征正交分解的动力学系统模型压缩方法、多级表格检索和推理框架等方法在实际场景中的优化效果，设计并实现了基于知识库的RAG智能问答系统。将检索增强生成技术与本地知识库技术结合并成功应用于水库调度、灌溉管理等场景，提升了水利水库调度领域的智能化水平。
+    4、为研究RAG系统在实际垂直场景中的应用技术，设计并实现了在水利调度场景下的基于知识库的RAG智能问答系统并在问答系统中利用了本文提出的表格数据推理框架来提升推理效果。将检索增强生成技术与本地知识库技术结合并成功应用于水库调度、灌溉管理等场景，提升了水利水库调度领域的智能化水平。
     \end{cabstract}
     
-    \ckeywords{大模型，模型压缩，表格数据推理，智能问答系统}
+    \ckeywords{大模型，模型压缩，表格数据推理，智能问答系统，检索增强推理}
     
     \begin{eabstract}
-        As research on large language models matures, their strong multimodal understanding and generation capabilities have been applied to various technical frameworks and complex industrial scenarios, such as industrial-assisted design, multi-parameter control system operation and maintenance decision-making. However, several challenges remain in the practical application of large language models.
-        The superior performance of large language models depends on their massive parameters and computing resources. In addition, other functional modules such as text embedding and knowledge retrieval are involved in the reasoning framework, reducing its timeliness. Moreover, large language models have limitations in data analysis, especially in tabular data reasoning. They can't directly handle complex tabular data, leading to significant hallucination problems. Furthermore, for intelligent systems with feedback control, insufficient training data restricts the improvement of reasoning capabilities.
-        To address these issues, this thesis focuses on the application of large language models within the Retrieval-Augmented Generation (RAG) technical framework, aiming to enhance reasoning efficiency and tabular data reasoning capabilities through model lightweight compression and tabular data reasoning optimization. It also explores the hydrological reservoir scheduling field by developing an intelligent feedback interaction system based on a local knowledge base. The main contributions are as follows:
-        
-        1、A Proper Orthogonal Decomposition (POD)-based dynamical system model compression method for Recurrent Neural Networks (RNNs) is proposed. It reduces model parameters and computations to 34.4\% and 25.6\% of the original, with a precision loss of less than 5\%, and improves interpretability by incorporating traditional dynamical methods.
+        As the theoretical foundations of large language models (LLMs) become increasingly mature, their exceptional capabilities in multi-modal understanding and generation have been applied to various technical frameworks and complex industrial scenarios, including industrial-assisted design and multi-parameter control system operations. However, practical applications of these models still face numerous challenges. The superior performance of large language models relies heavily on their vast parameter sizes and computational resources. Additionally, the reasoning frameworks of these models involve auxiliary modules such as text embedding and knowledge retrieval, which can reduce the timeliness of the reasoning process. Furthermore, large language models exhibit limitations in data analysis, particularly in tabular data reasoning, where their ability to handle complex tabular data is restricted, leading to significant hallucination issues. 
 
-        2、A multi-level tabular retrieval and reasoning framework is designed to address the limitations of large language models in structured tabular data reasoning. By integrating the Agent proxy concept and SQL code generation, complex numerical calculations are transformed into executable programs. Additionally, a cyclic self-correction mechanism of retrieval-optimization-generation is established to enhance reasoning quality.
+        To address these challenges, this study focuses on the application of Retrieval-Augmented Generation (RAG) technology frameworks, with an emphasis on model lightweight compression and optimization of tabular data reasoning capabilities. The goal is to enhance the reasoning efficiency of large language models and improve their reasoning capabilities for tabular data. Furthermore, this study explores the application of these technologies in the field of reservoir scheduling for water conservancy, designing and implementing an intelligent Q\&A system based on a local knowledge base for this domain. The main contributions of this work are summarized as follows:
 
-        3、To address the issues of missing intelligent feedback interaction systems in digital twin irrigation districts and their inability to meet the upgrading needs of scheduling systems, a multifunctional knowledge base for digital twin irrigation districts is designed and implemented. It provides local knowledge support for the intelligent feedback interaction system through RAG technology. Meanwhile, a business rule library is established to support business scenario rule adaptation and standardize and constrain water conservancy business management practices.
+        1. To improve the timeliness of RAG systems, this study proposes a model compression method based on Proper Orthogonal Decomposition (POD) for a common continuous prompt encoding network in RAG systems—recurrent neural networks. By projecting the hidden states of recurrent neural networks into a low-dimensional space, the model parameters and computational requirements are reduced to 34.4\% and 25.6\% of the original model, respectively, with a precision loss controlled within 5\%. Additionally, by expressing the neural network structure as a dynamic system differential equation, the interpretability of the model is enhanced.
 
-        4、To verify the practical optimization effects of the above mentioned POD based dynamical system model compression method for RNNs, the multi-level tabular retrieval and tabular reasoning framework, a knowledge based intelligent feedback interaction system is developed. It combines RAG with local knowledge base technologies, successfully applied to reservoir scheduling and irrigation management, enhancing intelligence in the field.
-        
+        2. To enhance the tabular data reasoning capabilities of RAG systems, this study designs a multi-level tabular retrieval and reasoning framework. By integrating agent-based ideas and SQL code generation technology, this framework leverages database techniques to simplify tabular data and constructs a cyclic self-correction mechanism for retrieval, optimization, and generation, thereby improving reasoning quality.
+
+        3. To address the lack of intelligent Q\&A systems in digital twin irrigation districts and their inability to meet the demands of upgraded scheduling systems, this study designs and implements a multi-functional intelligent knowledge base for digital twin irrigation districts. By integrating RAG technology, this knowledge base provides local knowledge support for the Q\&A system. Furthermore, a business rule library is established to support rule adaptation in business scenarios and to standardize and constrain water conservancy business management practices.
+
+        % 4. By applying the proposed POD-based dynamic system model compression method and multi-level tabular retrieval and reasoning framework, this study designs and implements a knowledge base-based RAG intelligent Q\&A system. The integration of retrieval-augmented generation technology with local knowledge base technology has been successfully applied to scenarios such as reservoir scheduling and irrigation management, thereby enhancing the level of intelligence in the field of water conservancy reservoir scheduling.
+        4. To explore the application technology of RAG systems in practical vertical fields, a knowledge-based RAG intelligent Q\&A system for water conservancy scheduling scenarios is designed and implemented. The tabular data reasoning framework proposed in this thesis is integrated into the Q\&A system to improve its reasoning effectiveness. Furthermore, by combining retrieval-augmented generation technology with local knowledge base technology, this approach has been successfully applied to reservoir scheduling, irrigation management, and other scenarios, thereby enhancing the intelligence level of reservoir scheduling in water conservancy.
     \end{eabstract}
     
-    \ekeywords{ Large Language Models, Model Compression, Table Data Reasoning, Intelligent Feedback Interaction System}
+    \ekeywords{ Large Language Models, Model Compression, Table Data Reasoning, Intelligent Question Answering System, RAG}
     
