--- a/shuthesis-master/data/appendix.tex
+++ b/shuthesis-master/data/appendix.tex
@@ -28,7 +28,7 @@
 % 等号成立当且仅当~$x_1=x_2=\cdots =x_n$.
 样例1：
 
-期望返回： 
+表名： 
 三里店洪水汛期调度运用计划表
 
 问题：
@@ -44,7 +44,7 @@
     \toprule
     \textbf{洪水标准} & \textbf{入库流量} & \textbf{入库洪水总量} & \textbf{迎洪控制水位} & \textbf{泄流措施} \\
     \midrule
-    5 & * & * & 汛限水位 & 开启输水建筑物水塔闸门 \\
+    5 & 43.3 & 42 & 汛限水位 & 开启输水建筑物水塔闸门 \\
     10 & * & * & 汛限水位 & 开启输水建筑物水塔闸门 \\
     20 & * & * & 汛限水位 & 开启输水建筑物水塔闸门 \\
     30 & * & * & 汛限水位 & 开启输水建筑物水塔闸门 \\
@@ -57,7 +57,7 @@
 \newpage
 样例2：
 
-期望返回：隆德县农业灌溉用水权确权汇总表
+表名：隆德县农业灌溉用水权确权汇总表
 
 问题：列出渝河库罐区所有确权水量大于20万立方米的村
 
@@ -68,39 +68,40 @@
     \footnotesize
     % \caption{隆德县农业灌溉用水权确权汇总表}
     % \label{tab:irrigation-rights}
-    \begin{tabular}{p{1.5cm}p{1.5cm}p{1.5cm}p{1.5cm}p{1.5cm}p{1.5cm}p{1.5cm}}
+    % \begin{tabular}{p{1.5cm}p{1.5cm}p{1.5cm}p{1.5cm}p{1.5cm}p{1.5cm}p{1.5cm}}
+    \begin{tabular}{lllllll}
     \toprule
-    \textbf{乡（镇）} & \textbf{灌区名称} & \textbf{灌溉方式} & \textbf{确权面积（亩）} & \textbf{净灌溉定额（m³/亩）} & \textbf{确权单元灌溉水利用系数} & \textbf{确权水量（万m³）} \\
+    \textbf{乡（镇）} & \textbf{灌区名称} & \textbf{灌溉方式} & \textbf{确权面积} & \textbf{净灌溉定额} & \textbf{\makecell{确权单元灌溉\\水利用系数}} & \textbf{确权水量} \\
     \midrule
-    峰台社区 & 渝河库井灌区 & 高效节灌 & 1396.83 & 115 & 0.883 & 18.19201 \\
-    竹林村 & 渝河库井灌区 & 高效节灌 & 841.73 & 115 & 0.883 & 10.96251 \\
-    杨店村 & 渝河库井灌区 & 高效节灌 & 360 & 115 & 0.883 & 4.688562 \\
-    咀头村 & 渝河库井灌区 & 高效节灌 & 180 & 115 & 0.883 & 2.344281 \\
-    吴山村 & 渝河库井灌区 & 高效节灌 & 150 & 115 & 0.883 & 1.953567 \\
-    % 三合村 & 渝河库井灌区 & 高效节灌 & 342.1 & 115 & 0.883 & 4.455436 \\
-    % 红崖社区 & 渝河库井灌区 & 高效节灌 & 551.7 & 115 & 0.883 & 7.185221 \\
-    % 南河村 & 渝河库井灌区 & 高效节灌 & 164.4 & 115 & 0.883 & 2.14111 \\
-    % 星火社区 & 渝河库井灌区 & 高效节灌 & 253.15 & 115 & 0.883 & 3.296971 \\
-    % 新兴村（新兴塬） & 渝河库井灌区 & 高效节灌 & 943 & 115 & 0.883 & 12.28143 \\
-    % 陈靳村（新兴塬） & 渝河库井灌区 & 高效节灌 & 584 & 115 & 0.883 & 7.605889 \\
-    % 光联村 & 渝河库井灌区 & 高效节灌 & 1187.635 & 115 & 0.883 & 15.4675 \\
-    % 和平村 & 渝河库井灌区 & 高效节灌 & 1996.876 & 115 & 0.883 & 26.00687 \\
-    % 马河村 & 渝河库井灌区 & 高效节灌 & 832.8089 & 115 & 0.883 & 10.84632 \\
-    清泉村 & 渝河库井灌区 & 高效节灌 & 2116.53 & 115 & 0.883 & 27.56523 \\
-    街道村 & 渝河库井灌区 & 高效节灌 & 3441.315 & 115 & 0.883 & 44.81894 \\
-    十八里村 & 渝河库井灌区 & 高效节灌 & 2832.681 & 115 & 0.883 & 36.89222 \\
-    新民村 & 渝河库井灌区 & 高效节灌 & 3331.927 & 115 & 0.883 & 43.39429 \\
-    许沟村 & 渝河库井灌区 & 高效节灌 & 3168.596 & 115 & 0.883 & 41.2671 \\
-    张树村 & 渝河库井灌区 & 高效节灌 & 3461.707 & 115 & 0.883 & 45.08452 \\
-    锦华村 & 渝河库井灌区 & 高效节灌 & 720.5493 & 115 & 0.883 & 9.384278 \\
-    锦屏村 & 渝河库井灌区 & 高效节灌 & 360.9471 & 115 & 0.883 & 4.700896 \\
+    峰台社区 & 渝河库井灌区 & 高效节灌 & 360.9471 & 115 & 0.883 & 18.19201 \\
+    竹林村 & 渝河库井灌区 & 高效节灌 & * & 115 & 0.883 & 10.96251 \\
+    杨店村 & 渝河库井灌区 & 高效节灌 & * & 115 & 0.883 & 4.688562 \\
+    咀头村 & 渝河库井灌区 & 高效节灌 & * & 115 & 0.883 & 2.344281 \\
+    吴山村 & 渝河库井灌区 & 高效节灌 & * & 115 & 0.883 & 1.953567 \\
+    三合村 & 渝河库井灌区 & 高效节灌 & * & 115 & 0.883 & 4.455436 \\
+    红崖社区 & 渝河库井灌区 & 高效节灌 & * & 115 & 0.883 & 7.185221 \\
+    南河村 & 渝河库井灌区 & 高效节灌 & * & 115 & 0.883 & 2.14111 \\
+    星火社区 & 渝河库井灌区 & 高效节灌 & * & 115 & 0.883 & 3.296971 \\
+    新兴村 & 渝河库井灌区 & 高效节灌 & * & 115 & 0.883 & 12.28143 \\
+    陈靳村 & 渝河库井灌区 & 高效节灌 & * & 115 & 0.883 & 7.605889 \\
+    光联村 & 渝河库井灌区 & 高效节灌 & * & 115 & 0.883 & 15.4675 \\
+    和平村 & 渝河库井灌区 & 高效节灌 & * & 115 & 0.883 & 26.00687 \\
+    马河村 & 渝河库井灌区 & 高效节灌 & * & 115 & 0.883 & 10.84632 \\
+    清泉村 & 渝河库井灌区 & 高效节灌 & * & 115 & 0.883 & 27.56523 \\
+    街道村 & 渝河库井灌区 & 高效节灌 & * & 115 & 0.883 & 44.81894 \\
+    十八里村 & 渝河库井灌区 & 高效节灌 & * & 115 & 0.883 & 36.89222 \\
+    新民村 & 渝河库井灌区 & 高效节灌 & * & 115 & 0.883 & 43.39429 \\
+    许沟村 & 渝河库井灌区 & 高效节灌 & * & 115 & 0.883 & 41.2671 \\
+    张树村 & 渝河库井灌区 & 高效节灌 & * & 115 & 0.883 & 45.08452 \\
+    锦华村 & 渝河库井灌区 & 高效节灌 & * & 115 & 0.883 & 9.384278 \\
+    锦屏村 & 渝河库井灌区 & 高效节灌 & * & 115 & 0.883 & 4.700896 \\
     \bottomrule
     \end{tabular}
 \end{table}
 \newpage
 样例3：
 
-期望返回：打食沟水库洪水汛期调度运用计划表
+表名：打食沟水库洪水汛期调度运用计划表
 
 问题：打石沟水库面对5年一遇洪水时的泄洪措施是什么
 
@@ -111,9 +112,9 @@
     \footnotesize
     % \caption{打食沟水库洪水汛期调度运用计划表}
     % \label{tab:flood-plan}
-    \begin{tabular}{p{2cm}p{2cm}p{2cm}p{2cm}p{2cm}}
+    \begin{tabular}{lllll}
     \toprule
-    \textbf{洪水标准（年）} & \textbf{库流量（m³/s）} & \textbf{洪水总量（万m³）} & \textbf{迎洪控制水位} & \textbf{泄流措施} \\
+    \textbf{洪水标准（年）} & \textbf{库流量} & \textbf{洪水总量} & \textbf{迎洪控制水位} & \textbf{泄流措施} \\
     \midrule
     5 & 19.2 & 12.2 & 汛限水位 & 开启输水建筑物水塔闸门 \\
     10 & 26.8 & 17 & 汛限水位 & 开启输水建筑物水塔闸门 \\
@@ -121,7 +122,7 @@
     30 & 44.1 & 27.9 & 汛限水位 & 开启输水建筑物水塔闸门 \\
     50 & 53.2 & 33.7 & 汛限水位 & 开启输水建筑物水塔闸门 \\
     100 & 66 & 41.8 & 汛限水位 & 开启输水建筑物水塔闸门 \\
-    300 & 86.7 & 54.9 & 汛限水位 & 开启输水建筑物水塔闸门，同时开启溢洪道泄洪 \\
+    300 & 86.7 & 54.9 & 汛限水位 & \makecell{开启输水建筑物水塔闸门\\，同时开启溢洪道泄洪} \\
     \bottomrule
     \end{tabular}
     \end{table}
