--- a/shuthesis-master/data/chap05.tex
+++ b/shuthesis-master/data/chap05.tex
@@ -2,11 +2,12 @@
 \chapter{基于大模型的智能问答系统设计}
 \label{cha:第五章}
 
-随着大模型技术的逐渐成熟，各个行业开始利用大模型的优秀生成能力完成简单工作。
+% 随着大模型技术的逐渐成熟，各个行业开始利用大模型的优秀生成能力完成简单工作。
 % 本章节主要介绍第\ref{cha:第三章}章的模型压缩技术与第\ref{cha:第四章}章的表格推理框架在学校与隆德县水利局合作项目中的应用，该项目主要设计研发面向水利调度领域的基于本地知识库的大模型智能问答系统。
-前两章节的研究主要为RAG系统中推理优化的相关技术研究，而本章节主要研究如何将前两章的技术应用于实际的智能问答系统中。
-本章节为学校合作企业隆德县水利局设计了基于本地知识库的大模型智能问答系统，并在其中应用第\ref{cha:第三章}章的模型压缩技术和第\ref{cha:第四章}章的表格推理框架，优化了问答系统的推理效率和对表格数据的推理能力。
-该问答系统的目的在于利用大模型推理和文本向量检索技术帮助水利行业从业者迅速掌握专业知识，面对多变的水利问题提供专家建议，节约学习和用人成本，减少因人为因素导致的工作失误，提高工作效率。该问答系统主要通过检索增强推理技术(Retrieval-augmented Generation, RAG)对复杂庞大的水库信息和水利调度经验进行分析,生成从业人员需要的专业意见。本智能问答系统主要包括两个部分，本地知识库的构建和基于知识库的智能问答功能。
+% 前两章节的研究主要为RAG系统中推理优化的相关技术研究，而本章节主要研究如何将前两章的技术应用于实际的智能问答系统中。
+% 本章节为学校合作企业隆德县水利局设计了基于本地知识库的大模型智能问答系统，并在其中应用第\ref{cha:第三章}章的模型压缩技术和第\ref{cha:第四章}章的表格推理框架，优化了问答系统的推理效率和对表格数据的推理能力。
+% 该问答系统的目的在于利用大模型推理和文本向量检索技术帮助水利行业从业者迅速掌握专业知识，面对多变的水利问题提供专家建议，节约学习和用人成本，减少因人为因素导致的工作失误，提高工作效率。该问答系统主要通过检索增强推理技术(Retrieval-augmented Generation, RAG)对复杂庞大的水库信息和水利调度经验进行分析,生成从业人员需要的专业意见。本智能问答系统主要包括两个部分，本地知识库的构建和基于知识库的智能问答功能。
+随着大模型技术的逐渐成熟，各个行业开始利用大模型的优秀生成能力完成简单工作。本章内容为RAG系统面向垂直领域的应用研究，主要为学校合作企业隆德县水利局设计研发面向水利调度领域的基于本地知识库的智能问答系统。该问答系统的目的在于利用大模型推理和文本向量检索技术帮助水利行业从业者迅速掌握专业知识，面对多变的水利问题提供专家建议，节约学习和用人成本，减少因人为因素导致的工作失误，提高工作效率。该问答系统主要通过检索增强推理技术对复杂庞大的水库信息和水利调度经验进行分析,生成从业人员需要的专业意见，同时应用了第\ref{cha:第四章}章的推理框架，增强了对表格数据的推理能力。本智能问答系统主要包括两个部分，本地知识库的构建和基于知识库的智能问答功能。
 \section{系统关键技术框架及应用}
 
 智能问答系统的工程实现主要包含以下功能模块：1 、向量数据库的构建及向量搜索2、基于大模型的推理框架。下面对工具开发中涉及的核心框架进行简单介绍。
@@ -208,7 +209,9 @@ LangChain与FAISS的技术组合在本研究中展现出显著的协同优势。
 
 
 \section{本章小结}
-本章聚焦于第前两章提出的技术在水利领域智能问答系统中的应用。系统关键技术框架构建方面，基于LangChain框架与FAISS向量数据库，设计并实现了高效的检索增强生成（RAG）问答系统。通过整合多级表格数据检索、大模型推理优化及用户交互界面，构建了完整的端到端技术链路，显著提升了系统对结构化数据的处理能力与响应效率，也通过模型压缩技术增强了框架的推理效率。RAG问答功能优化方面，针对水利领域专业知识的封闭性与复杂性，提出多级表格数据检索方法，通过表头与表名的向量化存储策略，解决了传统文本切块导致的表格信息失真问题。结合循环推理框架与Agent代理思想，将复杂表格任务分解为SQL生成与执行的多步流程，有效弥补了大模型在数值推理与长上下文处理中的局限性，提升了回答的准确性与可解释性。
+% 本章聚焦于第前两章提出的技术在水利领域智能问答系统中的应用。
+本章聚焦于RAG系统在智能问答助手中的应用研究。
+系统关键技术框架构建方面，基于LangChain框架与FAISS向量数据库，设计并实现了高效的检索增强生成（RAG）问答系统。通过整合多级表格数据检索、大模型推理优化及用户交互界面，构建了完整的端到端技术链路，显著提升了系统对结构化数据的处理能力与响应效率。RAG问答功能优化方面，针对水利领域专业知识的封闭性与复杂性，提出多级表格数据检索方法，通过表头与表名的向量化存储策略，解决了传统文本切块导致的表格信息失真问题。结合循环推理框架与Agent代理思想，将复杂表格任务分解为SQL生成与执行的多步流程，有效弥补了大模型在数值推理与长上下文处理中的局限性，提升了回答的准确性。
 
 知识库管理功能实现方面，设计并开发了知识库的动态管理功能，支持用户对本地文件的查询和浏览。通过JSON与SQLite的三级存储结构，实现了结构化表格数据的高效存储与快速检索，确保系统在水利调度场景下的灵活性与可扩展性。实际应用与效果验证方面，通过实际案例展示了系统在单轮问答、多轮对话及结构化数据处理中的表现。实验结果表明，问答系统能够准确召回本地知识、生成专业建议，并通过流式输出与交互式界面优化用户体验，为水利从业人员提供了高效、可靠的技术支持。本章内容不仅验证了检索增强生成技术与Agent框架在垂直领域中的实用价值，也为后续智能化问答系统的设计与行业落地提供了重要参考。
 
