--- a/shuthesis-master/data/chap06.tex
+++ b/shuthesis-master/data/chap06.tex
@@ -2,10 +2,16 @@
 \chapter{总结与展望}
 \label{cha:第六章}
 \section{全文总结}
-本文围绕基于大模型的智能问答系统的核心技术与应用展开系统性研究，重点突破模型轻量化压缩、表格数据推理优化及垂直领域系统集成等关键问题，主要取得以下成果：    1、针对一种文本编码网络——循环神经网络，提出一种基于本征正交分解（Proper Orthogonal Decomposition, POD）的动力学系统模型压缩方法，通过循环神经网络隐藏状态的低维投影，将模型参数量与计算量分别压缩至原始模型的34.4\%与25.6\%，精度损失控制在5\%以内，并将传统动力学方法引入神经网络中，提高了其可解释性。
-2、针对大模型对结构化表格数据推理的局限性，设计多级表格检索和推理框架，结合Agent代理思想及SQL代码生成技术，将复杂数值计算转化为可执行程序，并构建检索-优化-生成的循环自纠错机制，优化生成质量。
-3、针对数字孪生灌区目前存在的智能问答系统缺失。无法适应调度系统升级需求等问题，设计并实现了数字孪生灌区多功能知识库，结合RAG技术为智能问答系统提供本地知识支撑。通过建立业务规则库来支撑业务场景的规则适配，规范和约束水利业务管理行为。
-4、为验证基于本征正交分解的动力学系统模型压缩方法、多级表格检索和推理框架等方法在实际场景中的优化效果，设计并实现了基于知识库的智能问答系统。提高了知识库的利用效率和水利水库调度领域的智能化水平。将检索增强生成技术与本地知识库技术结合并成功应用于水库调度、灌溉管理等场景。系统支持流式输出与多轮交互，形成可复用的行业解决方案。研究通过理论创新与工程实践的结合，验证了大模型在知识密集型任务中的潜力，为智能系统的开发与垂直领域应用提供了方法论支撑与实践范例。
+本文围绕基于大模型的智能问答系统的核心技术与应用展开系统性研究，重点突破模型轻量化压缩、表格数据推理优化及垂直领域系统集成等关键问题，主要取得以下成果：    
+% 1、针对一种文本编码网络——循环神经网络，提出一种基于本征正交分解（Proper Orthogonal Decomposition, POD）的动力学系统模型压缩方法，通过循环神经网络隐藏状态的低维投影，将模型参数量与计算量分别压缩至原始模型的34.4\%与25.6\%，精度损失控制在5\%以内，并将传统动力学方法引入神经网络中，提高了其可解释性。
+% 2、针对大模型对结构化表格数据推理的局限性，设计多级表格检索和推理框架，结合Agent代理思想及SQL代码生成技术，将复杂数值计算转化为可执行程序，并构建检索-优化-生成的循环自纠错机制，优化生成质量。
+% 3、针对数字孪生灌区目前存在的智能问答系统缺失。无法适应调度系统升级需求等问题，设计并实现了数字孪生灌区多功能知识库，结合RAG技术为智能问答系统提供本地知识支撑。通过建立业务规则库来支撑业务场景的规则适配，规范和约束水利业务管理行为。
+% 4、为验证基于本征正交分解的动力学系统模型压缩方法、多级表格检索和推理框架等方法在实际场景中的优化效果，设计并实现了基于知识库的智能问答系统。提高了知识库的利用效率和水利水库调度领域的智能化水平。
+1、为提高RAG系统的时效性，针对一种RAG系统中常见的连续提示词编码网络——循环神经网络，提出一种基于本征正交分解（Proper Orthogonal Decomposition, POD）的动力学系统模型压缩方法，通过循环神经网络隐藏状态的低维投影，将模型参数量与计算量分别压缩至原始模型的34.4\%与25.6\%，精度损失控制在5\%以内，并且通过将神经网络结构表达为动力学系统微分方程的形式，提高了其可解释性。
+2、为提高RAG系统的表格数据推理能力，针对表格数据特点及大模型对结构化表格数据推理的局限性，设计多级表格检索和推理框架，结合Agent代理思想及SQL代码生成技术，利用数据库技术简化表格，并构建检索-优化-生成的循环自纠错机制，优化了推理质量。
+3、针对数字孪生灌区目前存在的智能问答系统缺失，无法适应调度系统升级需求等问题，设计并实现了数字孪生灌区多功能智能知识库，结合RAG技术为智能问答系统提供本地知识支撑。通过建立业务规则库来支撑业务场景的规则适配，规范和约束水利业务管理行为。
+4、应用上述基于本征正交分解的动力学系统模型压缩方法、多级表格检索和推理框架等方法在实际场景中的优化效果，设计并实现了基于知识库的RAG智能问答系统。将检索增强生成技术与本地知识库技术结合并成功应用于水库调度、灌溉管理等场景，提升了水利水库调度领域的智能化水平。
+将检索增强生成技术与本地知识库技术结合并成功应用于水库调度、灌溉管理等场景。系统支持流式输出与多轮交互，形成可复用的行业解决方案。研究通过理论创新与工程实践的结合，验证了大模型在知识密集型任务中的潜力，为智能系统的开发与垂直领域应用提供了方法论支撑与实践范例。
 \section{未来研究展望}
 本文及相关研究在该领域中仍然存在许多不足，作者认为还存在以下几个方面后续需要进一步扩充和深入研究：
 
