--- a/shuthesis-master/reference/refs.bib
+++ b/shuthesis-master/reference/refs.bib
@@ -3,7 +3,25 @@ author = {何果},
  title = {基于大模型的洪涝灾害防御数字化孪生系统的研究与实现},
 school = {西安理工大学},
 year = {2024}
-}    
+}
+@mastersthesis { 1024073638.nh,
+author = { 雷浩 },
+title = {面向专业领域的问答系统研究},
+school = {北京邮电大学},
+year = {2024}
+}
+@mastersthesis { 1024508435.nh,
+author = { 王柳苏 },
+title = {检索增强生成在医疗问答领域的应用研究},
+school = {华东师范大学},
+year = {2024}
+} 
+@mastersthesis { 1024579116.nh,
+author = { 覃毅哲 },
+title = {基于大型语言模型的汽车客服自动问答系统研究与设计},
+school = {电子科技大学},
+year = {2024}
+}      
 @mastersthesis{1024008988.nh,
 author = {孙维纬},
  title = {知识检索增强的对话系统研究},
