--- a/shuthesis-master/data/chap01.tex
+++ b/shuthesis-master/data/chap01.tex
@@ -9,7 +9,7 @@
 
 近年来，大模型问答系统和大模型表格推理技术在金融分析、社会服务和专家咨询等垂直领域加速落地，推动了人工智能在智能交互与信息处理领域的应用，助力国家数字经济和智能化发展的战略目标。该方向的研究紧密结合中国“数字中国”建设和《新一代人工智能发展规划》的建设需求，具有重要的理论与实践价值。通过研究大模型问答系统，可提升自然语言理解和生成技术在政务、医疗、金融等领域的实际应用能力，提高信息交互效率；而大模型表格推理技术则能实现对结构化数据的自动解析与推断，为复杂的决策支持、数据分析和业务管理提供高效和精准的技术解决方案。
 
-在大模型问答系统推理及部署相关技术中，由于推理框架中的各种模型参数较大，需要较高的存储和运算能力，而对于实时提供问题回答的问答系统，推理速度显得尤为重要。所以，模型的轻量化压缩技术是提高模型响应速度，改善用户体验的关键技术。大模型的问答系统在如金融、医疗和科研等众多领域有广泛的应用\cite{1024008988.nh,1024532352.nh,1024651093.nh,1024744443.nh,1024917032.nh}，针对问答系统的开发，确定的应用场景极为关键。
+在大模型问答系统推理及部署相关技术中，由于推理框架中的各种模型参数较大，需要较高的存储和运算能力，而对于实时提供问题回答的问答系统，推理速度显得尤为重要。所以，模型的轻量化压缩技术是提高模型响应速度，改善用户体验的关键技术。大模型的问答系统在如金融、医疗和科研等众多领域有广泛的应用\cite{1024008988.nh,1024073638.nh,1024579116.nh,1024744443.nh,1024508435.nh}，针对问答系统的开发，确定的应用场景极为关键。
 
 在常微分方程神经网络（Ordinary Differential Equation Neural Network）\cite{chen2018neural}的提出下，动力学系统微分方程和神经网络的结合进入大众视野。研究者逐渐将神经网络与动力学系统相联系，利用动力学系统中成熟且丰富的方法处理神经网络模型。借助动力学系统模型降阶的方法应用于神经网络的模型压缩中，能够提出新的模型压缩方法并验证两个领域存在联系，提高神经网络模型的理论可解释性，并为后续神经网络的理论研究提供思路。同时在大模型的嵌入层应用压缩算法，提高模型的推理速度，进而提高智能问答系统的相应速度。
 
@@ -149,15 +149,15 @@ Chen等人提出的Neural ODE\cite{chen2018neural}使用常微分方程(Ordinary
 
 
 \section{论文的主要研究内容及创新点}
-本论文以作者攻读硕士学位期间所承担课题的研究工作为基础，主要研究了动力学系统方法的模型压缩轻量化模型以及大模型表格数据推理技术，并将这些技术应用于面向水利领域的基于本地知识库的智能问答系统中。论文的主要内容包括以下几个方面： 
+本论文以作者攻读硕士学位期间所承担课题的研究工作为基础，主要研究了动力学系统方法的模型压缩轻量化技术、大模型表格数据推理技术和RAG系统的垂直应用研究。论文的主要内容包括以下几个方面： 
 
 第一，详细阐述了研究的背景和意义，并对国内外相关技术和研究现状进行了系统的综述。介绍了模型压缩和大模型表格数据推理在智能问答系统应用中的基础理论，包括ODE（Ordinary Differential Equation，常微分方程）神经网络模型、提示词学习和RAG（Retrieval-Augmented Generation，检索增强生成）技术原理以及大模型的表格数据推理等，为后续内容的展开奠定了坚实的理论基础。 
 
 第二，深入研究了基于动力学系统方法的模型压缩算法。针对RAG系统中连续提示词学习中的提示词编码模型之一的RNN（Recurrent Neural Network，循环神经网络）模型，构造了基于ODE的ODE-RNN模型，以此组成RNN动力学系统，并提出了一种基于POD（Proper Orthogonal Decomposition，本征正交分解）的模型降阶及压缩方法。在实验中，以一种常见的循环神经网络LSTM（Long Short-Term Memory Network，长短期记忆网络）为对象，通过该方法最高可以将原始模型的参数数量压缩至原始参数的34.4\%，计算量压缩至原始模型的25.6\%，而精度最多只损失5\%。
 
-第三，深入探讨了大型语言模型在表格数据推理方面的应用，并针对水利领域表格数据特点提出了一种创新的大型语言模型表格推理增强框架。该框架融合了检索增强推理技术和代码生成技术，旨在显著提升大型语言模型对Excel等表格数据的推理能力。具体而言，该框架从数据预处理、表格数据处理以及大型语言模型推理等多个关键环节进行了全面优化。通过先对表格数据进行预处理，再利用大型语言模型的代码生成能力生成SQL语言并执行等多轮协同步骤，有效解决了大型语言模型在表格推理领域面临的挑战，从而显著增强了推理效果和性能表现。
+第三，深入探讨了大型语言模型在表格数据推理方面的应用，并针对表格数据特点提出了一种创新的大型语言模型表格推理增强框架。该框架融合了检索增强推理技术和代码生成技术，旨在提升大型语言模型对Excel等表格数据的推理能力。具体而言，该框架从数据预处理、表格数据处理以及大型语言模型推理等多个关键环节进行了全面优化。通过先对表格数据进行预处理，再利用大型语言模型的代码生成能力生成SQL语言并执行等多轮协同步骤，有效解决了大型语言模型在表格推理领域面临的挑战，从而增强了推理效果和性能表现。
 
-第四，应用前两章节技术设计并实现了水利领域大模型智能问答系统，根据用户提供的多种资料形式，如word、PDF、Excel等，通过知识向量库。使用Langchain等开发框架实现了问答系统的主要功能要求，通过大模型实现多轮对话，满足用户对水利相关知识、调用规则和数据的查询和问答需求，支持对外部数据库的修改。结合第三部分的大模型表格数据推理效果，最终加强了问答系统对格式化数据的推理能力，提高了回答效果。
+第四，设计并实现了水利领域大模型智能问答系统，根据用户提供的多种资料形式，如word、PDF、Excel等，通过知识向量库。使用Langchain等开发框架实现了问答系统的主要功能要求，通过大模型实现多轮对话，满足用户对水利相关知识、调用规则和数据的查询和问答需求，支持对外部数据库的修改。并结合第三部分的推理框架，最终加强了问答系统对格式化数据的推理能力，提高了回答效果。
 % \begin{figure}[!h]
 %   \centering
 %   \includegraphics[scale=0.6]{图1.2.png}
@@ -174,7 +174,9 @@ Chen等人提出的Neural ODE\cite{chen2018neural}使用常微分方程(Ordinary
 
 \section{论文各章节关系梳理}
 
-为方便论文阅读，梳理各部分关键技术研究之间的关系，如图\ref{fig:章节架构}所示。第三章的循环神经网络压缩技术和第四章大模型表格数据推理技术框架均为在RAG系统中的关键应用技术。第三章循环神经网络作为连续提示词编码的常用结构之一，研究其压缩技术可以提升RAG系统的推理效率，第四章提出了针对水利领域表格数据资料特点的表格数据推理框架，能够增强RAG问答系统对表格数据的推理能力和回答质量。第五章应用上述两种技术，实现了水利领域的问答系统，应用前两章的技术增强了系统的推理效率和对表格数据的推理能力。
+为方便论文阅读，梳理各部分关键技术研究之间的关系，如图\ref{fig:章节架构}所示。第三章的循环神经网络压缩技术和第四章大模型表格数据推理技术框架均为在RAG系统中的关键优化技术。第三章循环神经网络作为连续提示词编码的常用结构之一，研究其压缩技术可以提升RAG系统的推理效率；第四章提出了针对表格数据资料特点的表格数据推理框架，能够增强RAG问答系统对表格数据的推理能力和回答质量；
+% 第五章应用上述两种技术，实现了水利领域的问答系统，应用前两章的技术增强了系统的推理效率和对表格数据的推理能力。
+第五章针对RAG系统垂直场景的应用进行研究，实现了水利领域的智能问答系统，并通过第四章的表格数据推理框架增强了对表格数据的推理能力。
 \begin{figure}[h]
   \centering
   \includegraphics[scale=0.6]{章节关系.png}
